# Progetto-definitivo

./: CMakeLists.txt
include/: App.h  Attivita.h  ControlloAnno.h  Data.h  FinestraDiAggiunta.h  FinestraDiModifica.h  FinestraPrincipale.h  FinestraVisualizzaGriglia.h  GiornoDelCalendario.h  Orario.h  Registro.h  Utility.h  finestra.h  ora.h  orario.h  pippo.h
src/: Attivita.cpp  CMakeLists.txt  ControlloAnno.cpp  FinestraDiAggiunta.cpp  FinestraDiModifica.cpp  FinestraPrincipale.cpp  FinestraVisualizzaGriglia.cpp  GiornoDelCalendario.cpp  Orario.cpp  Registro.cpp  Utility.cpp  app.cpp  data.cpp  finestra.cpp  main.cpp  orario.cpp
tst/: CMakeLists.txt  main.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp  testCercaData.cpp  testCercaNome.cpp  testCercaNome2.cpp  testOrario.cpp
